--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="{{ site.baseurl }}/img/tittle.ico">
 
     <!-- Safari Webpage Icon    by-BY -->
-    <link rel="apple-touch-icon" href="{{ site.baseurl }}/img/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="{{ site.baseurl }}/img/tittle.ico">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
